2004-10-31	Florian Boor  	<florian.boor@kernelconcepts.de>

	* Released version 0.1.21

2004-10-29	Ole Reinhardt   <ole.reinhardt@kernelconcepts.de>
	* network.c:
	Changed handling of WiFI WEP keys. Keys are saved as string by
	default if not in correct hexadecimal notation. A correct hexadecimal key
	has a length of 40, 104 or 232 bit (5, 13, 29 hex values).

	e.g.:

	string: "Hello_world_key"
	hex:    0102030405
	hex:    0102-0304-05
	hex:    0102-0304-0506-0708-0910-1112-13
	hex:    abcdef011234abcd0000000000
	hex:    dead-beef-0000-0000-0000-0000-00
	hex:    feed-a0-0a-000000000000000012


2004-10-28	Florian Boor  	<florian.boor@kernelconcepts.de>

	* suid.c, network.c: Don't set nameserver if entry is empty.
	* timeanddate.c, suid.c: Return feedback if ntpdate was successful.
	* Makefile: Version increased.

2004-10-26	Florian Boor  	<florian.boor@kernelconcepts.de>

	* Makefile: Version++
	* network.c: Increased default dialog size.
	* main.c: Make applets appear as a dialog on larger screens.
	* theme.c, main.c: Added hack "task_background" to change background
	                   image only.

2004-10-25	Florian Boor  	<florian.boor@kernelconcepts.de>

	* suid.c: Set hardware clock using hwclock.
	* storage.c (system_memory): Rewrote parser to work on linux 2.6 and 2.4.
	* sysinfo.c (get_device_info): Removed some now useless stuff.

2004-10-24	Florian Boor  	<florian.boor@kernelconcepts.de>

	* sysinfo.c (get_device_info): Changed memory size info to (hopefully)
	                               work with linux 2.6.
	                               Added some more details from uname().

2004-10-16	Florian Boor  	<florian.boor@kernelconcepts.de>

	* users/callbacks.c, interface.c: Support for standalone password dialog.
	* main.c: Added simple support for applets creating its own window.
	          New parameter to users setup: "password" for password change
			  dialog only.
	* cfgfile.c, network.c: Never open a file an dont check if opening was