@@ -1,3 +1,7 @@
+2004-11-01	Florian Boor  	<florian.boor@kernelconcepts.de>
+
+	* sound.c: Changed locations of mixer icons.
+
 2004-10-31	Florian Boor  	<florian.boor@kernelconcepts.de>
 
 	* Released version 0.1.21
